Se agregaron nuevos SVG para iconos de los botones de google y facebook, se crearon dos nuevos archivos dart (app_colors en donde definimos los colores mas usados en la apliacion y circle_button que es donde definimos la estructura que tienen los botones de facebook y google), se agrego la nueva ruta de los SVG en el archivo pubspec.yaml y se continuo con el diseño del login en el archivo login_form.dart

--- a/pruebastripe/pubspec.yaml
+++ b/pruebastripe/pubspec.yaml
@@ -52,6 +52,8 @@ flutter:
      - assets/pages/login/woman.svg
      - assets/pages/login/icons/correo-electronico.svg
      - assets/pages/login/icons/llave.svg
+     - assets/pages/login/icons/facebook.svg
+     - assets/pages/login/icons/google.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
