--- a/pruebastripe/pubspec.yaml
+++ b/pruebastripe/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   after_layout: ^1.0.7+2
   firebase_core: ^0.4.5
   firebase_auth: ^0.16.1
+  google_sign_in: ^4.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
