--- a/pruebastripe/pubspec.yaml
+++ b/pruebastripe/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_core: ^0.4.5
   firebase_auth: ^0.16.1
   google_sign_in: ^4.5.1
+  flutter_facebook_auth: ^0.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
